working login to dashboard

--- a/modules/login/login.html
+++ b/modules/login/login.html
@@ -4,7 +4,9 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>Login — My System</title>
-  <link rel="stylesheet" href="login.css" />
+
+  <!-- Corrected CSS path -->
+  <link rel="stylesheet" href="/modules/login/login.css" />
 </head>
 <body>
   <main class="container">
@@ -58,7 +60,7 @@
 
   </main>
 
-  <!-- External JS for login handling -->
-  <script src="login.js"></script>
+  <!-- Corrected JS path -->
+  <script src="/modules/login/login.js"></script>
 </body>
 </html>
