--- a/modules/role/role-manager.html
+++ b/modules/role/role-manager.html
@@ -4,33 +4,18 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <title>Role Manager — My System</title>
-  <link rel="stylesheet" href="role-manager.css">
+  <link rel="stylesheet" href="../role/role-manager.css">
 </head>
 <body>
   <div class="dashboard-container">
     <!-- Sidebar -->
-   <aside class="sidebar">
-  <h2>My System</h2>
-  <nav>
-    <ul class="menu">
-      <li><a href="../dashboard/dashboard.html">Home</a></li>
-
-      <!-- Parent Module -->
-      <li class="has-submenu">
-        <a href="javascript:void(0)" class="submenu-toggle">USER MANAGEMENT </a>
-        <ul class="submenu">
-          <li><a href="../user-manager/user-manager.html">User Manager</a></li>
-          <li><a href="../role-manager/role-manager.html">Role Manager</a></li>
-        </ul>
-      </li>
-
-      <li><a href="#">Reports</a></li>
-      <li><a href="#">Settings</a></li>
-      <li><a href="../login/login.html">Logout</a></li>
-    </ul>
-  </nav>
-</aside>
-
+    <aside class="sidebar">
+      <h2>My System</h2>
+      <nav>
+        <!-- Dynamic sidebar will be generated here -->
+        <ul id="sidebarMenu" class="menu"></ul>
+      </nav>
+    </aside>
 
     <!-- Main content -->
     <main class="main-content">
@@ -56,9 +41,8 @@
           <thead>
             <tr>
               <th>ID</th>
-              <th>Role</th>
+              <th>Role Name</th>
               <th>Description</th>
-              <th>Restore By</th>
               <th>Modified By</th>
               <th>Actions</th>
             </tr>
@@ -75,7 +59,7 @@
           <thead>
             <tr>
               <th>ID</th>
-              <th>Role</th>
+              <th>Role Name</th>
               <th>Description</th>
               <th>Deleted By</th>
               <th>Actions</th>
@@ -106,20 +90,22 @@
     </div>
   </div>
 
-  <script src="role-manager.js"></script>
+  <!-- Scripts -->
+   <!-- Scripts -->
+  <script src="../dashboard/dashboard.js"></script>
+  <script src="../role/role-manager.js"></script>
   <script>
-    // === Tab Switching ===
+    // Tab Switching
     document.querySelectorAll(".tab-btn").forEach(btn => {
       btn.addEventListener("click", () => {
-        // remove active sa lahat
         document.querySelectorAll(".tab-btn").forEach(b => b.classList.remove("active"));
         document.querySelectorAll(".tab-content").forEach(tc => tc.classList.remove("active"));
 
-        // add active sa pinindot
         btn.classList.add("active");
         document.getElementById(btn.dataset.tab).classList.add("active");
       });
     });
   </script>
+
 </body>
 </html>
